Archive2/ca/7e9be1ef938ae0/output
main.cpp:9:11: error: field has incomplete type 'Bar'
        T t;
          ^
main.cpp:18:5: note: in instantiation of template class 'Foo<Bar>' requested here
    fFooBar(foobar);
    ^
main.cpp:13:7: note: forward declaration of 'Bar'
class Bar;  //Incomplete type
      ^
1 error generated.
